--- a/style.css
+++ b/style.css
@@ -2,3 +2,17 @@
     margin:0;
     padding:0;
 }
+
+.navi{
+    
+    
+}
+ul{
+    display: flex;
+    padding: 18px;
+    
+}
+li{
+    padding: 9px;
+    list-style-type: none;
+}
